# pre-commit-localization-hooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg  setup.py
pre_commit_po_hooks/: missing_error_messages.py  utils.py
