[tool.poetry]
name = "pre-commit-localization-hooks"
version = "0.1.0"
description = ""
authors = ["Daria Baranova <darya.baranova@softhub.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0"
babel = "2.12.1"
pytest = "7.3.1"
faker = "18.9.0"
setuptools = "^73.0.1"
wheel = "^0.44.0"

[tool.poetry.group.dev.dependencies]
babel = "2.12.1"
pytest = "7.3.1"
faker = "18.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
