[metadata]
name = pre_commit_localization_hooks
version = 1.0.0
description = pre-commit hooks for localization error messages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bg-open-source/pre-commit-localization-hooks
author = Daria Baranova
author_email = darya.baranova@softhub.by

[options]
packages = pre_commit_localization_hooks
python_requires = >=3.11.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    missing-error-messages-hook = pre_commit_po_hooks.missing_error_messages:main

[options.extras_require]
dev =
    Babel==2.12.1
    pytest==7.3.1
    Faker==18.9.0
test =
    Babel==2.12.1
    pytest==7.3.1
    Faker==18.9.0
